yameen-corportion: Fixes the image alignment caculations
 * Forcefully Image width was seting to 350px for the gallery, now when it expands it gets full dimensions i.e., 915x915 but duw to explicit width rect object was taking the 350px

--- a/components/image-carousal/image-carousal.module.css
+++ b/components/image-carousal/image-carousal.module.css
@@ -51,7 +51,6 @@
 }
 
 .image {
-    width: 350px; /* Maintain aspect ratio */
     object-fit: contain; /* Maintain aspect ratio */
     transition: height var(--transition-timing-5),
     width var(--transition-timing-5),
